--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,12 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+.wrapper {
+	width: 876px;
+	margin: 0 auto;
+}
+
+.nav-bar a:not(:last-child) {
+	margin-right: 30px;
+}
