--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -84,7 +84,13 @@ h1, h2, h3, h4, h5 {
 
 .nav {
 	padding: 30px 0;
+	background-color: rgb(7, 66, 66);
+	position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    
 }
+}
+
 
 /* header */
 
